# aoc

./: .infisical.json  .pre-commit-config.yaml  Taskfile.yml  pyproject.toml  scratch.ipynb
common/: config.py
d01/: __main__.py  core.py
d02/: core.py
d03/: core.py
scripts/: new.py
template/: core.py.j2  test.py.j2
tests/: test_d01.py  test_d02.py  test_d03.py
y2022/d01/: __main__.py
y2022/d02/: __main__.py
y2022/d03/: __main__.py
y2023/d01/: __main__.py
y2023/d02/: __main__.py
y2024/d01/: core.py
y2024/d02/: core.py
y2024/d03/: core.py
y2024/d04/: core.py
y2024/d05/: core.py
y2024/d06/: core.py
y2024/d07/: core.py
y2024/d08/: core.py
y2024/d09/: core.py
y2024/d10/: core.py
y2024/d11/: core.py
y2024/tests/: test_d01.py  test_d02.py  test_d03.py  test_d04.py  test_d05.py  test_d06.py  test_d07.py  test_d08.py  test_d09.py  test_d10.py  test_d11.py
y2025/d01/: core.py
y2025/d02/: core.py
y2025/d03/: core.py
y2025/d04/: core.py
y2025/d05/: core.py
y2025/d06/: core.py
y2025/d07/: core.py
y2025/d08/: core.py
y2025/d09/: core.py
y2025/d11/: core.py
y2025/tests/: test_d01.py  test_d02.py  test_d03.py  test_d04.py  test_d05.py  test_d06.py  test_d07.py  test_d08.py  test_d09.py  test_d11.py
