[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvd.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pytest = "^8.3.4"
aocd = "^0.1"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
numpy = "^2.1.3"
matplotlib = "^3.9.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
ipython = "^8.30.0"
jupyter = "^1.1.1"
notebook = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402", "E741", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
