[project]
name = "aoc"
version = "2025.12.1"
description = ""
authors = [{ name = "Kenneth V. Domingo", email = "hello@kvd.studio" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest>=8.0.0,<9",
    "advent-of-code-data>=2.0.0,<3",
    "python-dotenv>=1.0.1,<2",
    "jinja2>=3.1.4,<4",
    "numpy>=2.1.3,<3",
    "matplotlib>=3.9.3,<4",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1,<0.9",
    "ipython>=8.30.0,<9",
    "jupyter>=1.1.1,<2",
    "notebook>=7.3.1,<8",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402", "E741", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
